gcc/testsuite/rust/compile/parse_simple_path_fail_1.rs
pub(in crate::) struct S;
// { dg-error "expecting ... but .::. found" "" { target *-*-* } .-1 }
